--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -45,10 +45,10 @@ http {
 
     server {
         charset     utf-8;
-        listen      8111;
+        listen      8112;
         server_name localhost;
 
-        root        /app/service/public;
+        root        /data/notify/service/public;
         index       index.php;
 
         access_log  /opt/bitnami/nginx/logs/access.log;
