--- a/environment/docker/php/custom.ini
+++ b/environment/docker/php/custom.ini
@@ -13,33 +13,33 @@ max_file_uploads = 20
 
 
 ;extension=bz2
-;extension=curl
+extension=curl
 ;extension=ffi
 ;extension=ftp
-;extension=fileinfo
-;extension=gd
+extension=fileinfo
+extension=gd
 ;extension=gettext
 ;extension=gmp
-;extension=intl
+extension=intl
 ;extension=imap
 ;extension=ldap
-;extension=mbstring
-;extension=exif      ; Must be after mbstring as it depends on it
-;extension=mysqli
+extension=mbstring
+extension=exif      ; Must be after mbstring as it depends on it
+extension=mysqli
 ;extension=oci8_12c  ; Use with Oracle Database 12c Instant Client
-;extension=odbc
-;extension=openssl
+extension=odbc
+extension=openssl
 ;extension=pdo_firebird
 ;extension=pdo_mysql
 ;extension=pdo_oci
-;extension=pdo_odbc
-;extension=pdo_sqlsrv
+extension=pdo_odbc
+extension=pdo_sqlsrv
 extension=sqlsrv
 ;extension=pdo_pgsql
 ;extension=pdo_sqlite
 ;extension=pgsql
 ;extension=shmop
-;extension=soap
+extension=soap
 ; Defines the default timezone used by the date functions
 ; http://php.net/date.timezone
 date.timezone = Europe/Samara
